gobmkida/g0/show_dragons
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/show_dragons/src/engine/dragon.c:1832:14: error: expected ';' at end of declaration
void *__ptr32 *v10; // rdi 
             ^
             ;
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/show_dragons/src/engine/dragon.c:1930:6: error: use of undeclared identifier 'snames_2'
v6 = snames_2[dragon[posa].status]; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/show_dragons/src/engine/dragon.c:1931:6: error: use of undeclared identifier 'snames_2'
v7 = snames_2[dragon[posa].crude_status]; 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/show_dragons/src/engine/dragon.c:1935:1: error: use of undeclared identifier 'v10'
v10 = &off_4D4BBC; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/show_dragons/src/engine/dragon.c:1935:8: error: use of undeclared identifier 'off_4D4BBC'
v10 = &off_4D4BBC; 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/show_dragons/src/engine/dragon.c:1937:1: error: use of undeclared identifier 'v10'
v10 = &off_4D4BBC + 2; 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/show_dragons/src/engine/dragon.c:1937:8: error: use of undeclared identifier 'off_4D4BBC'
v10 = &off_4D4BBC + 2; 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/show_dragons/src/engine/dragon.c:1942:1: error: use of undeclared identifier 'v10'
v10, 
^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/show_dragons/src/engine/dragon.c:1953:31: error: use of undeclared identifier 'snames_2'
gprintf( ", owl status %s\n", snames_2[dragon[posa].owl_status]); 
                              ^
9 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/show_dragons/src/obj/1/dragon.o] Error 1
